--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+d              "src/styles.css",
               "./node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": []
@@ -63,7 +63,6 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          
           "configurations": {
             "production": {
               "browserTarget": "cdrsAngular:build:production"
